* Custom `baseUrl` alternative for methods in `MvcUriComponentsBuilder`.
* Serialization/deserialization exception messages are now logged at WARN level.
* When using GSON or Jackson 2.6+, the handler method return type is used to improve
  serialization of parameterized types like `List<Foo>`.
* Default JSON prefix has been changed from "{} && " to the safer ")]}', " one.

=== WebSocket Messaging Improvements

* Expose presence information about connected users and subscriptions:
** new `SimpUserRegistry` exposed as a bean named "userRegistry".
** sharing of presence information across cluster of servers (see broker relay config options).
* Resolve user destinations across cluster of servers (see broker relay config options).
* `StompSubProtocolErrorHandler` extension point to customize and control STOMP ERROR frames to clients.
* Global `@MessageExceptionHandler` methods via `@ControllerAdvice` components.
* Heart-beats and a SpEL expression 'selector' header for subscriptions with `SimpleBrokerMessageHandler`.
* STOMP client for use over TCP and WebSocket; see <<websocket-stomp-client>>.
* `@SendTo` and `@SendToUser` can contain destination variable placeholders.
* Jackson's `@JsonView` supported for return values on `@MessageMapping` and `@SubscribeMapping` methods.
* `ListenableFuture` and `CompletableFuture` as return value types from
  `@MessageMapping` and `@SubscribeMapping` methods.
* `MarshallingMessageConverter` for XML payloads.

=== Testing Improvements

* JUnit-based integration tests can now be executed with JUnit rules
  instead of the `SpringJUnit4ClassRunner`. This allows Spring-based
  integration tests to be run with alternative runners like JUnit's
  `Parameterized` or third-party runners such as the 
  `MockitoJUnitRunner`.
** Spring JUnit rule configuration requires the following two rules.
[source,java,indent=0]
[subs="verbatim,quotes"]
----
    @ClassRule
    public static final SpringClassRule SPRING_CLASS_RULE = new SpringClassRule();
